Chapter05/basic-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: simple-frontend-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: frontend
          servicePort: 80
