Chapter05/oauth2-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: oauth2-proxy-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
spec:
  tls:
  - hosts:
    - handsonaks-ingress.westus2.cloudapp.azure.com
    secretName: tls-secret
  rules:
  - host: handsonaks-ingress.westus2.cloudapp.azure.com
    http:
      paths:
      - path: /oauth2
        backend:
          serviceName: oauth2-proxy
          servicePort: 4180
